# shivtext

./: README.md  pyproject.toml
shivlite/: README.md  pyproject.toml
shivlite/src/shivlite/: __init__.py
src/shivtcdfinance.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/shivtext/: __init__.py  auth.py  ϕphrase.py
src/shivtext.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/shivtext/dict/: phrase_codes.json
v0.1.0/src/shivtext/: __init__.py  ϕdictionary.py  ϕreferences.py
v0.1.0/src/shivtext/reference/: manifest.json
v0.3.0/: pyproject.toml
v0.4.0/: PKG-INFO
v0.5.0/: pyproject.toml
v0.5.0/src/shivtext/dict/: frequency_dictionary_en_82_765_opt.txt
v0.5.1/: pyproject.toml
v0.5.1/src/shivtext/: ϕphrase.py
v0.5.1/src/shivtext/dict/: phi4five_codes.json  token_map.json
v0.6.0/src/shivtext/: __init__.py
v0.7.0/: PKG-INFO  pyproject.toml
v0.7.0/src/shivtext/: __init__.py
v0.7.1/: PKG-INFO  pyproject.toml
v0.7.1/src/shivtext/: ϕdictionary.py  ϕencyclopedia.py
v0.7.2/: PKG-INFO  README.md  pyproject.toml
v0.7.2/src/shivtext/: __init__.py
v0.7.2/src/shivtext/encyclopaedia/: manifest.json
v0.7.3/: PKG-INFO  pyproject.toml
v0.7.3/src/shivtext/: __init__.py  ϕv4.py
v0.7.3/src/shivtext/dict/: v4.dict
v0.7.4/: pyproject.toml
v0.8.0/: PKG-INFO  pyproject.toml
v0.8.1/: PKG-INFO  README.md  pyproject.toml
v0.8.1/src/shivtext/: __init__.py
v0.8.2/: PKG-INFO  pyproject.toml
