[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "shivtcdfinance"
version = "0.1.0"
description = "Token-optimized dictionary for φ-lang v4-five. Dictionary + Encyclopaedia + Reference."
requires-python = ">=3.10"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shivtcdfinance = ["dict/*.txt", "dict/*.json", "encyclopaedia/*.json", "reference/*.json"]
