[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "shivtext"
version = "0.4.0"
description = "Token-optimized dictionary for φ-lang v4-five. Dictionary + Encyclopaedia + Reference."
requires-python = ">=3.10"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shivtext = ["dict/*.txt", "dict/*.json", "encyclopaedia/*.json", "reference/*.json"]
