# Root pyproject.toml — reference only.
# Each version folder (v0.1.0/ ... v0.8.2/) contains its own build configuration.
# Active development: shivlite/ directory.

[project]
name = "shivtext"
version = "0.8.2"
description = "Token-optimized dictionary for φ-lang v4-five. Dictionary + Encyclopaedia + Reference."

[project.urls]
Homepage = "https://github.com/shivtcdfinance/shivtext"
Repository = "https://github.com/shivtcdfinance/shivtext"
